# ggst-api-template

./: Cargo.toml  README  example.env  generate_token.py  requirements.txt
src/: ggst_api.rs  main.rs  requests.rs
