[package]
name = "ggst-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features=["full"] }
reqwest = "0.11.14"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
hex = "0.4.3"
aes-gcm = "0.10.1"
rmp-serde = "1"
base64-url = "1.4.13"
